--- a/udev.conf
+++ b/udev.conf
@@ -8,10 +8,10 @@
 #
 
 # udev_root - where in the filesystem to place the device nodes
-udev_root="/dev/"
+udev_root="/udev/"
 
 # udev_db - The name and location of the udev database.
-udev_db="/dev/.udev.tdb"
+udev_db="/udev/.udev.tdb"
 
 # udev_rules - The name and location of the udev rules file
 udev_rules="/etc/udev/rules.d/"
