--- a/udev.conf
+++ b/udev.conf
@@ -16,9 +16,6 @@ udev_db="/dev/.udev.tdb"
 # udev_rules - The name and location of the udev rules file
 udev_rules="/etc/udev/rules.d/"
 
-# udev_permissions - The name and location of the udev permission file
-udev_permissions="/etc/udev/permissions.d/"
-
 # default_mode - set the default mode for all nodes that have no
 #                explicit match in the permissions file
 default_mode="0600"
@@ -31,8 +28,8 @@ default_owner="root"
 #                 explicit match in the permissions file
 default_group="root"
 
-# udev_log - set to "yes" if you want logging, else "no"
-udev_log="yes"
+# The syslog(3) priority: "err", "info", or the numerical value.
+udev_log="err"
 
 #
 # Variables in uppercase are for the scripts only
