--- a/udev.conf
+++ b/udev.conf
@@ -11,7 +11,7 @@
 udev_root="/dev/"
 
 # udev_db - The name and location of the udev database.
-udev_db="/dev/.udev.tdb"
+udev_db="/dev/.udevdb"
 
 # udev_rules - The name and location of the udev rules file
 udev_rules="/etc/udev/rules.d/"
