--- a/udev.conf
+++ b/udev.conf
@@ -18,3 +18,22 @@ udev_rules="/etc/udev/rules.d/"
 
 # The syslog(3) priority: "err", "info", or the numerical value.
 udev_log="err"
+
+#
+# Initial hotplug synthesizing method. Possible values:
+# udevstart (default) or udevsynthesize (new).
+# 
+# udevsynthesize gets all available devices from sysfs and synthesizes the
+# events these devices would have generated at creation time.
+# The events are directly passed to the udevd daemom socket. udevd does all the
+# work and runs all the events asynchronously. udevsynthesize itself does
+# not read any udev rule.
+#
+# It scans block and class devices to create the the device nodes for already
+# available devices, which obsoletes the run of udevstart.
+#
+# After that, it scans for bus devices, which events may load modules or
+# configure the device. If the bus type is known, the usual bus-specific
+# values are added to the event environment.
+#
+UDEV_STARTER="udevstart"
