--- a/udev.conf
+++ b/udev.conf
@@ -7,21 +7,20 @@
 # WARNING: changing any value, can cause serious system breakage!
 #
 
-# udev_root - where in the filesystem to place the device nodes
+# Where in the filesystem to place the device nodes
 udev_root="/dev/"
 
-# udev_db - The name and location of the udev database.
-udev_db="/dev/.udevdb"
-
-# udev_rules - The name and location of the udev rules file
+# The name and location of the udev rules file
 udev_rules="/etc/udev/rules.d/"
 
-# The syslog(3) priority: "err", "info", or the numerical value.
+# The initial syslog(3) priority: "err", "info", "debug" or its
+# numerical equivalent. For runtime debugging, the daemons internal
+# state can be changed with: "udevcontrol log_priority=<value>".
 udev_log="err"
 
 #
 # Initial hotplug synthesizing method. Possible values:
-# udevstart (default) or udevsynthesize (new).
+# udevstart (default) or udevsynthesize (new/experimental).
 # 
 # udevsynthesize gets all available devices from sysfs and synthesizes the
 # events these devices would have generated at creation time.
