--- a/udev.conf
+++ b/udev.conf
@@ -7,41 +7,32 @@
 # WARNING: changing any value, can cause serious system breakage!
 #
 
-# udev_root - where in the filesystem to place the device nodes
-udev_root="/udev/"
+# Where in the filesystem to place the device nodes
+udev_root="/dev/"
 
-# udev_db - The name and location of the udev database.
-udev_db="/udev/.udev.tdb"
-
-# udev_rules - The name and location of the udev rules file
+# The name and location of the udev rules file
 udev_rules="/etc/udev/rules.d/"
 
-# udev_permissions - The name and location of the udev permission file
-udev_permissions="/etc/udev/permissions.d/"
-
-# default_mode - set the default mode for all nodes that have no
-#                explicit match in the permissions file
-default_mode="0600"
-
-# default_owner - set the default owner for all nodes that have no
-#                 explicit match in the permissions file
-default_owner="root"
-
-# default_group - set the default group for all nodes that have no
-#                 explicit match in the permissions file
-default_group="root"
-
-# udev_log - set to "yes" if you want logging, else "no"
-udev_log="yes"
-
-####################################################
-# Additional configuration options added by Red Hat
-####################################################
+# The initial syslog(3) priority: "err", "info", "debug" or its
+# numerical equivalent. For runtime debugging, the daemons internal
+# state can be changed with: "udevcontrol log_priority=<value>".
+udev_log="err"
 
 #
-# Variables in uppercase are for the scripts only
+# Initial hotplug synthesizing method. Possible values:
+# udevstart (default) or udevsynthesize (new/experimental).
+# 
+# udevsynthesize gets all available devices from sysfs and synthesizes the
+# events these devices would have generated at creation time.
+# The events are directly passed to the udevd daemom socket. udevd does all the
+# work and runs all the events asynchronously. udevsynthesize itself does
+# not read any udev rule.
 #
-
-# if shell script actions should be logged
-UDEV_LOG="yes"
-
+# It scans block and class devices to create the the device nodes for already
+# available devices, which obsoletes the run of udevstart.
+#
+# After that, it scans for bus devices, which events may load modules or
+# configure the device. If the bus type is known, the usual bus-specific
+# values are added to the event environment.
+#
+UDEV_STARTER="udevstart"
