This commit was manufactured by cvs2git to create tag 'auto-ac-udev-079-5'.
Sprout from AC-branch 2006-06-26 19:16:09 UTC freetz <freetz@pld-linux.org> '- for Ac'
Cherrypick from master 2005-10-21 07:49:43 UTC freetz <freetz@pld-linux.org> '- s/daemon/hotplug (from hotplug)':
    udev-net.helper -> 1.3
Cherrypick from unlabeled-1.1.2 2006-01-26 16:08:23 UTC freetz <freetz@pld-linux.org> '- updated from HEAD':
    udev.conf -> 1.1.2.2
Cherrypick from unlabeled-1.11.2 2006-06-26 19:17:06 UTC freetz <freetz@pld-linux.org> '- misc fixes from HEAD':
    udev-modprobe.rules -> 1.11.2.1
Cherrypick from unlabeled-1.150.2 2006-07-02 16:46:08 UTC freetz <freetz@pld-linux.org> '- rel.5':
    udev.spec -> 1.150.2.4
Cherrypick from unlabeled-1.2.2 2006-06-26 19:17:05 UTC freetz <freetz@pld-linux.org> '- misc fixes from HEAD':
    udev-hotplug_map.rules -> 1.2.2.1
Cherrypick from unlabeled-1.8.2 2006-02-13 23:05:21 UTC Elan Ruusamäe <glen@pld-linux.org> '-default valuefor UDEV_STARTER':
    start_udev -> 1.8.2.2
Cherrypick from unlabeled-1.9.2 2006-06-26 19:17:06 UTC freetz <freetz@pld-linux.org> '- misc fixes from HEAD':
    udev.rules -> 1.9.2.2
Delete:
    udev-alsa.rules

--- a/udev.conf
+++ b/udev.conf
@@ -17,3 +17,22 @@ udev_rules="/etc/udev/rules.d/"
 # numerical equivalent. For runtime debugging, the daemons internal
 # state can be changed with: "udevcontrol log_priority=<value>".
 udev_log="err"
+
+#
+# Initial hotplug synthesizing method. Possible values:
+# udevstart (default) or udevsynthesize (new/experimental).
+# 
+# udevsynthesize gets all available devices from sysfs and synthesizes the
+# events these devices would have generated at creation time.
+# The events are directly passed to the udevd daemom socket. udevd does all the
+# work and runs all the events asynchronously. udevsynthesize itself does
+# not read any udev rule.
+#
+# It scans block and class devices to create the the device nodes for already
+# available devices, which obsoletes the run of udevstart.
+#
+# After that, it scans for bus devices, which events may load modules or
+# configure the device. If the bus type is known, the usual bus-specific
+# values are added to the event environment.
+#
+UDEV_STARTER="udevstart"
